2008-12-26  Michael Snyder  <msnyder@vmware.com>

	* Marker: adding teawater patches to branch.

2008-12-26  Sandra Loosemore  <sandra@codesourcery.com>

	* breakpoint.c (update_watchpoint): Refactor to avoid compiler
	warning.

2008-12-22  Tom Tromey  <tromey@redhat.com>

	* stack.c (print_block_frame_locals): Print spaces, not tabs.
	Update for call to print_variable_and_value.
	(print_frame_arg_vars): Update.
	* value.h (print_variable_and_value): Rename from
	print_variable_value.  Add 'name' and 'indent' parameters.
	* printcmd.c (print_variable_and_value): Rename from
	print_variable_value.  Add 'name' and 'indent' parameters.  Use
	common_val_print.
	* f-valprint.c (info_common_command): Update.

2008-12-22  Tom Tromey  <tromey@redhat.com>

	* python/python-value.c (valpy_length): Remove #if.

2008-12-22  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* python/python-internal.h (PyEval_ReleaseLock): New define.
	
2008-12-22  Tom Tromey  <tromey@redhat.com>

	* c-exp.y (ident_tokens): New global.
	(struct token) <cxx_only>: New field.
	(tokentab3): Update.
	(tokentab2): Update.
	(yylex): Use ident_tokens.

2008-12-22  Adam Denton  <adenton@yahoo.com>

	PR gdb/8307:
	* environ.c (free_environ): Free e->vector.

2008-12-22  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Fix memory double-free.
	* completer.c (line_completion_function): Clear LIST after called xfree.

2008-12-22  Joel Brobecker  <brobecker@adacore.com>

	* breakpoint.c (update_watchpoint): Adjust and extend the description
	of this function.  Fix one error message accordingly.

2008-12-21  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Fix hw watchpoints created before the inferior was started.
	* breakpoint.c (update_watchpoint): Convert the bp_watchpoint and
	bp_hardware_watchpoint types according to the current runtime state.

2008-12-18  Pedro Alves  <pedro@codesourcery.com>

	* linux-nat.c (linux_child_follow_fork): If following the child,